--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
 		"autoprefixer": "^10.4.2",
 		"tailwindcss": "^3.0.12"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"clipboard": "^2.0.10"
+	}
 }
