--- a/package.json
+++ b/package.json
@@ -11,22 +11,26 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
+		"@smui/slider": "^6.0.0-beta.16",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
+		"autoprefixer": "^10.4.2",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
+		"postcss": "^8.4.5",
+		"postcss-load-config": "^3.1.1",
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
 		"svelte": "^3.44.0",
-		"postcss": "^8.4.5",
-		"postcss-load-config": "^3.1.1",
 		"svelte-preprocess": "^4.10.1",
-		"autoprefixer": "^10.4.2",
+		"svelte-range-slider-pips": "^2.0.3",
 		"tailwindcss": "^3.0.12"
 	},
 	"type": "module",
 	"dependencies": {
-		"clipboard": "^2.0.10"
+		"@tailwindcss/aspect-ratio": "^0.4.0",
+		"clipboard": "^2.0.10",
+		"tippy.js": "^6.3.7"
 	}
 }
