--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@smui/slider": "^6.0.0-beta.16",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"autoprefixer": "^10.4.2",
@@ -23,8 +22,8 @@
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
 		"svelte": "^3.44.0",
+		"svelte-loading-spinners": "^0.1.7",
 		"svelte-preprocess": "^4.10.1",
-		"svelte-range-slider-pips": "^2.0.3",
 		"tailwindcss": "^3.0.12"
 	},
 	"type": "module",
